# MuOrg

./: .gitignore  AGENTS.md  README.md  pyproject.toml
muorg/: __init__.py  cli.py  organizer.py  tags.py  utils.py
tests/: __init__.py  test_cli.py  test_organizer.py  test_tags.py  test_utils.py
