[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MuOrg"
version = "0.5.3"
description = "Music library organizer by artist and album tags"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Manmade9416", email = "cr0d@proton.me"}
]
keywords = ["music", "organizer", "id3", "tags", "library", "cleaner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mutagen>=1.47",
    "pytest>=7.0",
]

[project.scripts]
muorg = "muorg.cli:main"

[project.urls]
Homepage = "https://github.com/Manmade9416/MuOrg"
Repository = "https://github.com/Manmade9416/MuOrg"
Issues = "https://github.com/muorg/Manmade9416/MuOrg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["muorg*"]

[tool.setuptools.package-data]
muorg = ["py.typed"]
